tests-system/mult/output
mult String [5..3]
                ^ mult/bar.rsl:24: issue: upper bound must be at least 5 [impossible_array_types]
mult String [0..0]
                ^ mult/bar.rsl:19: issue: this array makes no sense [impossible_array_types]
mult = [ "A", "B"]
                 ^ mult/instances.trlc:6: error: this array requires at least 5 elements (only 2 provided)
mult = [ "A", "B"]
                 ^ mult/instances.trlc:16: error: this array requires at least 5 elements (only 2 provided)
mult = [ "A", "B"]
                 ^ mult/instances.trlc:21: error: this array requires at least 3 elements (only 2 provided)
bar.MyType SomeThing {
           ^^^^^^^^^ mult/instances.trlc:4: check error: mult must have 3 elements
Processed 1 model and 1 requirement file and found 2 warnings and 4 errors
